# movies_from_a_hat_api

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements_dev.txt
.github/workflows/: test.yaml
api/: README.md  pyproject.toml  requirements.txt  requirements_dev.txt
api/app/: api.py  config.py  db.py  db_helpers.py  movies.py  patch.py  security.py  settings.py  tables.py  tmdb.py  tmdb_models.py  users.py
api/tests/: api_fixtures.py  conftest.py  test_api.py  test_tmdb.py  test_users.py
api/tests/test_data/: 115.json  550.json  6978.json
movies_from_a_hat_api/: __init__.py
tests/: __init__.py  test_movies_from_a_hat_api.py
ui/: .gitignore  README.md  elm-application.json  elm-land.json  elm.json  package-lock.json  package.json  start.json  tailwind.config.js
ui/review/: elm.json
ui/review/src/: ReviewConfig.elm
ui/review/suppressed/: NoUnused.CustomTypeConstructors.json
ui/src/: Api.elm  Auth.elm  Effect.elm  Error.elm  Shared.elm  Ui.elm  View.elm
ui/src/Data/: User.elm
ui/src/Pages/: Home_.elm  SignIn.elm
ui/src/Pages/Movies/: Search.elm
ui/style/: style.css
ui/tests/: Example.elm
