[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "movies_from_a_hat_api"
version = "0.0.1"
authors = [
  { name="Benjamin Falk", email="falk.ben@gmail.com" },
]
description = "Movies from a Hat API Endpois"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
]

[project.optional-dependencies]
dev = [
    "pytest",
]
