[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "movies_from_a_hat"
version = "0.0.1"
authors = [
  {name = "Benjamin Falk", email = "falk.ben@gmail.com"},
]
description = "Movies from a Hat"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "sqlmodel",
  "python-dotenv",
  "alembic",
  "loguru",
  "httpx",
  "python-multipart",  # parse form data
  "aiosqlite",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-asyncio",
  "requests",
]

[tool.pytest.ini_options]
# this enables pytest-asyncio automatically for any async test function
asyncio_mode = "auto" # https://github.com/pytest-dev/pytest-asyncio#auto-mode

[tool.isort]
profile = "black"
